--- a/index.html
+++ b/index.html
@@ -14,39 +14,29 @@
     <header>
         <h1 class="dashboard text-center">Weather Dashboard</h1>
     </header>
-    <section>
-        <div class="d-flex justify-content-end">
-            <div class="col-sm-6">
-                <h2>Atlanta</h2>
-                <p>temp</p>
-                <p>wind</p>
-                <p>humidity</p>
-            </div>
-        </div>
-        <div class="d-flex justify-content-end">
-            <div class="col-sm-6">
-                <h3>5-day forecast</h3>
-                <div>day 1</div>
-                <div>day 2</div>
-                <div>day 3</div>
-                <div>day 4</div>
-                <div>day 5</div>
-            </div>
-
-        </div>
-
-        <div>
-            <h2 class="col-sm-4">Search for a City:</h2>
-            <div class="d-flex justify-content-start">
-                <form class="col-sm-4">
-                    <input type="search" placeholder="San Diego" class="form-control">
-                    <label class="form-label" for="form1"></label>
-                    <button class="btn btn-primary w-100">Search</button>
+    <div class="d-flex">
+        <section class="flex-row">
+            <div class="d-flex">
+                <form class="col-md-8">
+                    <h2>Search for a city:</h2>
+                    <input type="text" placeholder="Los Angeles" class="form-control">
+                    <button type="submit" class="btn btn-primary w-100">Submit</button>
                 </form>
-
             </div>
-    </section>
+            <div class="col-md-8">
+                <h3>atlanta</h3>
 
+                <div class="d-flex row">
+                    <div>sadasdasd</div>
+                    <div>sadasdasd</div>
+                    <div>sadasdasd</div>
+                    <div>sadasdasd</div>
+                    <div>sadasdasd</div>
+                </div>
+            </div>
+
+        </section>
+    </div>
 
 
 
@@ -58,36 +48,3 @@
 </body>
 
 </html>
-
-
-
-
-
-
-
-
-
-
-
-
-<!-- <section id="main-page">
-    <h2 class="col-sm-4">Search for a City:</h2>
-    <div class="d-flex justify-content-start">
-        <form class="col-sm-4">
-            <input type="search" placeholder="San Diego" class="form-control">
-            <label class="form-label" for="form1"></label>
-            <button class="btn btn-primary w-100">Search</button>
-        </form>
-        <div id="current-forecast">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum, id esse illo et doloremque
-                necessitatibus
-                sapiente autem. Sapiente, sit aliquam quasi commodi nihil quibusdam quos repellat veniam ex minus a.
-            </p>
-        </div>
-    </div>
-
-    <div class="col-sm-4 d-flex flex-direction-end" id="recent-search">
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero deserunt veniam illo eos eius? Vel quaerat
-            suscipit quo ipsum laboriosam odit, assumenda quas modi et rerum repudiandae tempore hic voluptatem.</p>
-    </div>
-</section> -->
