created layout for the main page

--- a/index.html
+++ b/index.html
@@ -14,29 +14,44 @@
     <header>
         <h1 class="dashboard text-center">Weather Dashboard</h1>
     </header>
-    <div class="d-flex">
-        <section class="flex-row">
-            <div class="d-flex">
-                <form class="col-md-8">
-                    <h2>Search for a city:</h2>
-                    <input type="text" placeholder="Los Angeles" class="form-control">
-                    <button type="submit" class="btn btn-primary w-100">Submit</button>
-                </form>
-            </div>
-            <div class="col-md-8">
-                <h3>atlanta</h3>
 
-                <div class="d-flex row">
-                    <div>sadasdasd</div>
-                    <div>sadasdasd</div>
-                    <div>sadasdasd</div>
-                    <div>sadasdasd</div>
-                    <div>sadasdasd</div>
+    <section>
+        <div id="front-page">
+            <div class="row">
+                <div class="col-md-4">
+                    <form class="col">
+                        <h2>Search for a city:</h2>
+                        <input type="text" placeholder="Los Angeles" class="form-control">
+                        <button type="submit" class="btn btn-primary w-100">Submit</button>
+                    </form>
+                    <div class="col">
+                        asdasdasdasdasd
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="row">
+                        <h2>atlanta</h2>
+                        <p> 30 C / 400 C</p>
+                        <p> 45 mph</p>
+                        <p> 30% </p>
+                    </div>
+                    <div class="row">
+                        <div class="card" style="width: 18rem;">
+                            <div class="card-body">
+                                <h5>Date</h5>
+                                <p> 30 C / 400 C</p>
+                                <p> 45 mph</p>
+                                <p> 30% </p>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
+        </div>
+        </div>
 
-        </section>
-    </div>
+    </section>
+
 
 
 
@@ -48,3 +63,27 @@
 </body>
 
 </html>
+
+
+
+
+
+
+<!-- <div class="d-flex">
+    <form class="col-md-8">
+        <h2>Search for a city:</h2>
+        <input type="text" placeholder="Los Angeles" class="form-control">
+        <button type="submit" class="btn btn-primary w-100">Submit</button>
+    </form>
+</div>
+<div class="col-md-8">
+    <h3>atlanta</h3>
+
+    <div class="d-flex row">
+        <div>sadasdasd</div>
+        <div>sadasdasd</div>
+        <div>sadasdasd</div>
+        <div>sadasdasd</div>
+        <div>sadasdasd</div>
+    </div>
+</div> -->
