updated the dashboard layout as well as updated some css properties

--- a/index.html
+++ b/index.html
@@ -19,23 +19,24 @@
         <div id="front-page">
             <div class="row">
                 <div class="col-md-4">
-                    <form class="col">
+                    <form id="search-area" class="col">
                         <h2>Search for a city:</h2>
-                        <input type="text" placeholder="Los Angeles" class="form-control">
-                        <button type="submit" class="btn btn-primary w-100">Submit</button>
+                        <input id="search-bar" type="text" placeholder="Los Angeles" class="form-control">
+                        <button id="search-button" type="submit" class="btn btn-primary w-100">Submit</button>
                     </form>
-                    <div class="col">
-                        asdasdasdasdasd
+                    <div id="recent-searches" class="col border-top border-secondary-subtle">
+                        <p>asdasdasdasdasd</p>
                     </div>
                 </div>
                 <div class="col">
-                    <div class="row">
-                        <h2>atlanta</h2>
+                    <div class="row border border-secondary-subtle">
+                        <h3>atlanta</h3>
                         <p> 30 C / 400 C</p>
                         <p> 45 mph</p>
                         <p> 30% </p>
                     </div>
                     <div class="row">
+                        <h4>5-Day Forecast:</h4>
                         <div class="card" style="width: 18rem;">
                             <div class="card-body">
                                 <h5>Date</h5>
@@ -63,27 +64,3 @@
 </body>
 
 </html>
-
-
-
-
-
-
-<!-- <div class="d-flex">
-    <form class="col-md-8">
-        <h2>Search for a city:</h2>
-        <input type="text" placeholder="Los Angeles" class="form-control">
-        <button type="submit" class="btn btn-primary w-100">Submit</button>
-    </form>
-</div>
-<div class="col-md-8">
-    <h3>atlanta</h3>
-
-    <div class="d-flex row">
-        <div>sadasdasd</div>
-        <div>sadasdasd</div>
-        <div>sadasdasd</div>
-        <div>sadasdasd</div>
-        <div>sadasdasd</div>
-    </div>
-</div> -->
