updated search buttons text as well as updated the styling slightly on the application

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                     <form id="search-area" class="col">
                         <h2>Search for a city:</h2>
                         <input id="search-bar" type="text" placeholder="Los Angeles" class="form-control">
-                        <button id="search-button" type="submit" class="btn btn-primary w-100">Submit</button>
+                        <button id="search-button" type="submit" class="btn btn-primary w-100">Search</button>
                     </form>
                     <div id="recent-searches" class="col border-top border-secondary-subtle">
                         <p>asdasdasdasdasd</p>
