added logic to javascript to show the forecast and the 5 day forecast for the city the user enters

--- a/index.html
+++ b/index.html
@@ -30,20 +30,20 @@
                 </div>
                 <div class="col">
                     <div class="row border border-secondary-subtle">
-                        <h3>atlanta</h3>
-                        <p> 30 C / 400 C</p>
-                        <p> 45 mph</p>
-                        <p> 30% </p>
+                        <h3 id="city-title"></h3>
+                        <p id="temp"> Temp:</p>
+                        <p id="wind">Wind:</p>
+                        <p id="humidity">Humidity:</p>
                     </div>
-                    <div class="row">
+                    <div id="five-cards" class="row">
                         <h4>5-Day Forecast:</h4>
-                        <div class="card" style="width: 18rem;">
-                            <div class="card-body">
+                        <!-- <div class="card" style="width: 18rem;"> -->
+                            <!-- <div class="card-body">
                                 <h5>Date</h5>
                                 <p> 30 C / 400 C</p>
                                 <p> 45 mph</p>
                                 <p> 30% </p>
-                            </div>
+                            </div> -->
                         </div>
                     </div>
                 </div>
@@ -60,6 +60,8 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
         crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/dayjs@1/dayjs.min.js"></script>
+        
     <script src="./Assets/js/script.js"></script>
 </body>
 
