working on displaying icons

--- a/index.html
+++ b/index.html
@@ -37,13 +37,7 @@
                     </div>
                     <div id="five-cards" class="row">
                         <h4>5-Day Forecast:</h4>
-                        <!-- <div class="card" style="width: 18rem;"> -->
-                            <!-- <div class="card-body">
-                                <h5>Date</h5>
-                                <p> 30 C / 400 C</p>
-                                <p> 45 mph</p>
-                                <p> 30% </p>
-                            </div> -->
+                        <!-- javascript will genrate the code for the 5 day forecast here -->
                         </div>
                     </div>
                 </div>
