updated style on application

--- a/index.html
+++ b/index.html
@@ -28,15 +28,16 @@
                         <p>asdasdasdasdasd</p>
                     </div>
                 </div>
-                <div class="col">
+                <div class="col-md-8">
                     <div class="row border border-secondary-subtle">
                         <h3 id="city-title"></h3>
                         <p id="temp"> Temp:</p>
                         <p id="wind">Wind:</p>
                         <p id="humidity">Humidity:</p>
                     </div>
+                    <h4>5 Day Forecast:</h4>
                     <div id="five-cards" class="row">
-                        <h4>5-Day Forecast:</h4>
+                        <h5 class="col-md-10 col-sm-12 col-lg-8"></h5>
                         <!-- javascript will genrate the code for the 5 day forecast here -->
                     </div>
                 </div>
