working on recent search loop

--- a/index.html
+++ b/index.html
@@ -19,13 +19,15 @@
         <div id="front-page">
             <div class="row">
                 <div class="col-md-4">
-                    <form id="search-area" class="col">
+                    <form id="search-area" class="col" action="">
                         <h2>Search for a city:</h2>
                         <input id="search-bar" type="text" placeholder="Los Angeles" class="form-control">
                         <button id="search-button" type="submit" class="btn btn-primary w-100">Search</button>
                     </form>
                     <div id="recent-searches" class="col border-top border-secondary-subtle">
-                        <p>asdasdasdasdasd</p>
+                        <ul id="save-btn-list">
+
+                        </ul>
                     </div>
                 </div>
                 <div class="col-md-8">
