--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WeatherNow</title>
+    <!-- tag that links bootstrap css -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <link rel="stylesheet" href="./Assets/css/style.css">
@@ -32,6 +33,7 @@
                 </div>
                 <div class="col-md-8">
                     <div class="row border border-secondary-subtle">
+                        <!-- javascripit will generate the text and elements that will go inside each of the tags below -->
                         <h3 id="city-title"></h3>
                         <p id="temp"> Temp:</p>
                         <p id="wind">Wind:</p>
@@ -50,10 +52,11 @@
 
     </section>
 
-
+<!-- links bootstrap js -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
         crossorigin="anonymous"></script>
+        <!-- links dayjs -->
     <script src="https://cdn.jsdelivr.net/npm/dayjs@1/dayjs.min.js"></script>
 
     <script src="./Assets/js/script.js"></script>
