added some small styling changes

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="./Assets/css/style.css">
 </head>
 
-<body>
+<body id="bak-ground">
     <header>
         <h1 class="dashboard text-center">Weather Dashboard</h1>
     </header>
@@ -33,7 +33,7 @@
                 </div>
                 <div class="col-md-8">
                     <div class="row border border-secondary-subtle">
-                        <!-- javascripit will generate the text and elements that will go inside each of the tags below -->
+                        <!-- javascripit will generate the text and elements that will go inside each of the tags below for the current day forecast -->
                         <h3 id="city-title"></h3>
                         <p id="temp"> Temp:</p>
                         <p id="wind">Wind:</p>
