--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                         </ul>
                     </div>
                 </div>
-                <div class="col-md-8">
+                <div class="col-sm-8">
                     <div class="row border border-secondary-subtle">
                         <!-- javascripit will generate the text and elements that will go inside each of the tags below for the current day forecast -->
                         <h3 id="city-title"></h3>
@@ -41,7 +41,7 @@
                     </div>
                     <h4>5 Day Forecast:</h4>
                     <div id="five-cards" class="row">
-                        <h5 class="col-md-10 col-sm-12 col-lg-8"></h5>
+                        <h5 class="row d-flex "></h5>
                         <!-- javascript will genrate the code for the 5 day forecast here -->
                     </div>
                 </div>
